--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "dev": "webpack-dev-server --hot --progress"
   },
   "engines": {
-    "node": "4.x"
+    "node": "5.x"
   },
   "devDependencies": {
-    "angular2": "^2.0.0-beta.9",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.33.13",
-    "es7-reflect-metadata": "^1.6.0",
+    "angular2": "2.0.0-beta.9",
+    "es6-promise": "3.1.2",
+    "es6-shim": "0.33.13",
+    "es7-reflect-metadata": "1.6.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
     "karma-jasmine": "^0.3.7",
@@ -27,11 +27,12 @@
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.4",
     "rimraf": "^2.5.2",
-    "rxjs": "^5.0.0-beta.2",
+    "rxjs": "5.0.0-beta.2",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.2",
+    "typings": "^0.7.9",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "zone.js": "^0.5.15"
+    "zone.js": "0.5.15"
   }
 }
