--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "node": "5.x"
   },
   "devDependencies": {
-    "angular2": "2.0.0-beta.9",
-    "es6-promise": "3.1.2",
-    "es6-shim": "0.33.13",
-    "es7-reflect-metadata": "1.6.0",
+    "angular2": "2.0.0-beta.12",
+    "es6-promise": "^3.1.2",
+    "es6-shim": "^0.35.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
     "karma-jasmine": "^0.3.7",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-chrome-launcher": "~0.2.3",
     "karma-spec-reporter": "0.0.24",
     "karma-webpack": "^1.7.0",
     "path": "^0.12.7",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.4",
+    "es7-reflect-metadata": "^1.6.0",
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.2",
     "ts-loader": "^0.8.1",
@@ -33,6 +34,6 @@
     "typings": "^0.7.9",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "zone.js": "0.5.15"
+    "zone.js": "0.6.6"
   }
 }
